tree-sitter-kama/grammar.js
    source_file: ($) =>
      seq(
        optional($.file_gate),
        optional($.import_declaration),
        optional($.export_manifest),
        repeat($._top_level_declaration),
      ),

    // THE FILE GATE — `file @compileFor(!ARCH_WASM32);`, kama.y's `file_directive_opt`. A unit's FIRST
    // line, ahead of `import`, gating the whole file the way `@compileFor` gates one declaration.
    // Leading `file` rather than attribute-first because at THIS position the attribute-first spelling
    // costs the compiler's grammar two conflicts (the deciding token sits past the whole attribute list);
    // one token of lookahead is what makes it free here too.
    //
    // The payload is a plain `attribute_list`, exactly as in kama.y — restricting it to `@compileFor` is
    // the compiler's job, so a file gate carrying `@noheap` PARSES here and is rejected there. That
    // asymmetry is deliberate and matches how every other semantic rule is split.
    _top_level_declaration: ($) =>
      choice(
        $.function_declaration,
        $.extern_declaration,
        $.extern_const_declaration,
        $.fnptr_declaration,
        $.type_declaration,
        $.adapter_declaration,
        $.enum_declaration,
        $.module_variable_declaration,
        $.comptime_assert_statement,
      ),

    // ── Type declarations ───────────────────────────────────────────────────────────────────────────
    // kama.y:248. `type <modifiers> <kind> Name ...` where <kind> is an ORDINARY IDENTIFIER. See the
    // header note; `type_kind` exists so a query never has to rely on pattern ordering to colour it.
    function_declaration: ($) =>
      seq(
        optional($.attribute_list),
        optional($.function_modifier),
        optional('unsafe'),
        optional('comptime'),
        'fn',
        field('return_type', $._function_return_type),
        field('name', $.identifier),
        optional($.type_parameters),
        field('parameters', $.parameter_list),
        // A function's compile-time values are its LAST list — after the runtime one.
        optional($.comptime_parameters),
        field('body', $.block),
      ),

    // `expose` only — free functions. NOT part of the member `modifier` set.
    _function_return_type: ($) =>
      choice($._type, $.void_type, $.reference_return_type),

    void_type: ($) => 'void',
    // kama.y — `ref T` (a writable place) or `const ref T` (a read-only place); the const comes first,
    // matching the parameter spelling `const ref T x`.
    parameter_list: ($) => seq('(', commaSep($.parameter), ')'),

    // kama.y:384 — no default values, no varargs.
    _type: ($) => choice($.primitive_type, $.type_name),

    primitive_type: ($) => choice(...PRIMITIVE_TYPES),

    type_name: ($) =>
      seq(
        repeat(seq($.identifier, '::')),
        field('name', $.identifier),
        optional($.type_arguments),
        // `InlineArray<int32>#(4)`, and `Buf#(8)` for a type parameterised by values alone.
        optional($.comptime_arguments),
      ),

    // The USE-site argument list. This is where `>>` must split; see the header note.
    type_arguments: ($) => seq('<', commaSep1($._type_argument), '>'),

    // TYPES only. A compile-time value goes in `#(…)`, so the literal arm and the parenthesised
    // const-arithmetic arm (`InlineArray<T, (N+1)>`, whose parens only ever existed to keep `>` from
    // closing the list) are both gone — that shape is now `InlineArray<T>#(N + 1)`.
    _type_argument: ($) =>
      choice(
        $._type,
        // A NAMED override, `A: Arena`, skipping an earlier default.
        seq(field('name', $.identifier), ':', $._type),
      ),

    block: ($) => seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $.local_variable_declaration,
        $.local_constant_declaration,
        $.block,
        $.empty_statement,
        $.expression_statement,
        $.if_statement,
        $.while_statement,
        $.do_statement,
        $.for_statement,
        $.foreach_statement,
        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.arm_value_statement,
        $.unsafe_statement,
        $.spawn_statement,
        $.scope_statement,
        $.borrow_statement,
        $.parallel_for_statement,
        $.parallel_spawn_statement,
        $.asm_statement,
        $.comptime_assert_statement,
      ),

    // C-style: `int32 i = 0, j;`. There is no `let`/`var`.
    // `slot T x;` — a declared HOLE (no value yet, no destructor until assigned). A leading keyword,
    // like `const`/`comptime` below.
    local_variable_declaration: ($) =>
      seq(
        optional('slot'),
        field('type', $._type),
        commaSep1($.variable_declarator),
        ';',
      ),

    variable_declarator: ($) =>
      seq(
        field('name', $._name),
        optional(seq('=', field('value', $._variable_initializer))),
      ),

    // `Isolate h = spawn worker(p: give x);` — the handle form. `spawn` is an initializer only here.
    _variable_initializer: ($) => choice($._expression, $.spawn_expression),

    spawn_expression: ($) => seq('spawn', $.call_expression),

    expression_statement: ($) => seq($._statement_expression, ';'),

    _statement_expression: ($) =>
      choice(
        $.call_expression,
        $.object_creation_expression,
        $.assignment_expression,
        $.update_expression,
        $.match_expression,
      ),

    // MANDATORY BRACES — every branch and loop body is a `block`, never a bare statement. kama.y raises
    // "the body of `if` must be braced" as a PARSE error, so tree-sitter must reject the same inputs:
    // test/parse-errors.txt is DERIVED from the compiler's parse-vs-semantic split, and this rule lands
    // on the parse side. The editor flagging a bare body live is the point, not a side effect.
    //
    // `else` is the one exemption, and it is not a bare body: the alternative may be a block OR another
    // `if`, which is an `else if` chain link. prec.right still binds an `else` to the nearest `if`.
    foreach_statement: ($) =>
      seq(
        'foreach',
        '(',
        optional('ref'),
        field('type', $._type),
        field('name', $._binding_name),
        'in',
        field('collection', $._expression),
        ')',
        field('body', $.block),
      ),

    // kama.y:490 — `ref` is MANDATORY (disjoint mutable access is the whole point) and the body must be a
    // block, because those braces ARE the join barrier.
    parallel_for_statement: ($) =>
      seq(
        'parallel_for',
        '(',
        'ref',
        field('type', $._type),
        field('name', $.identifier),
        'in',
        field('collection', $._expression),
        optional($.parallel_workers),
        ')',
        field('body', $.block),
      ),

    // kama.y — `parallel_spawn` is DELIBERATELY the same tail as `parallel_for`, so the two cannot drift.
    // The difference is semantic, not syntactic: K is length() exactly, and the enclosing `scope { }`
    // owns the join, so the children run alongside the statements after it.
    parallel_spawn_statement: ($) =>
      seq(
        'parallel_spawn',
        '(',
        'ref',
        field('type', $._type),
        field('name', $.identifier),
        'in',
        field('collection', $._expression),
        optional($.parallel_workers),
        ')',
        field('body', $.block),
      ),

    // `, workers: <expr>` — MANDATORY on parallel_for, FORBIDDEN on parallel_spawn. Optional in the
    // grammar for both so each mistake gets a sentence from the compiler rather than a syntax error, and
    // `workers` stays an ordinary identifier (it is a local in tests/parallel_spawn_pool.kama).
    return_statement: ($) => seq('return', optional($._expression), ';'),

    // `:= expr;` — the value a match arm's BLOCK produces. A statement, not a jump.
    arm_value_statement: ($) => seq(':=', $._expression, ';'),

    unsafe_statement: ($) => seq('unsafe', field('body', $.block)),
    scope_statement: ($) => seq('scope', field('body', $.block)),

    // `borrow h as v, k as w { ... }` — the lexical window a view is minted into (view model). The host
    // is a general expression here for the same reason kama.y uses `primary_expression`: a non-place host
    // (`this.items[i]`, `makeVec()`) must reach the compiler and be rejected with a sentence, so the
    // grammar must PARSE it. Mirrors kama.y's borrow_statement / borrow_bindings / borrow_binding.
    spawn_statement: ($) => seq('spawn', $.call_expression, ';'),

    // Exactly ONE string-literal operand, and it is embedded assembly — never interpolated.
    asm_statement: ($) => seq('asm', '(', field('code', $.string_literal), ')', ';'),

    // kama.y `comptime_assert_statement`. `comptime assert(cond: …, msg: "…");` — a compile-time
    // assertion (M7), legal at module, type-member and statement scope. `assert` is a reserved word (a
    // call-site intrinsic), so the callee is an `intrinsic_callee`; kama.y also admits any other name here
    // so the emitter can refuse it with a sentence, and so does this.
    match_expression: ($) =>
      seq(
        'match',
        '(',
        field('subject', $._expression),
        ')',
        '{',
        repeat($.match_arm),
        '}',
      ),

    match_arm: ($) =>
      seq(
        'case',
        field('pattern', $.match_pattern),
        ':',
        field('body', choice(seq($._expression, ';'), $.block)),
      ),

    // No guards, no literal patterns, no alternatives, no nesting. `_` is just an identifier.
    // A payload pattern NAMES its fields — `case Rect(w: width, h: height)` — exactly as a call names
    // its parameters. There is no positional form.
    match_pattern: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq('(', commaSep1($.match_binding), ')')),
      ),

    match_binding: ($) =>
      seq(field('field', $._binding_name), ':', field('name', $._binding_name)),

    // ── Expressions ─────────────────────────────────────────────────────────────────────────────────
    _expression: ($) =>
      choice(
        $._literal,
        $.identifier,
        $._slot_name,
        $._file_name,
        $.scoped_identifier,
        $.this_expression,
        $.base_expression,
        $.parenthesized_expression,
        $.field_expression,
        $.call_expression,
        $.subscript_expression,
        $.object_creation_expression,
        $.array_literal,
        $.downcast_expression,
        $.match_expression,
        $.unary_expression,
        $.update_expression,
        $.binary_expression,
        $.ternary_expression,
        $.assignment_expression,
        $.handoff_expression,
        $.cast_expression,
        $.bitcast_expression,
        $.truncate_expression,
        $.sizeof_expression,
      ),

    this_expression: ($) => 'this',

    field_expression: ($) =>
      prec.left(
        PREC.member,
        seq(field('object', $._expression), '.', field('field', $._name)),
      ),

    _callable: ($) =>
      choice(
        $.identifier,
        $._slot_name,          // a `fnptr` binding may be named with a contextual word (KB-35)
        $._file_name,
        $.intrinsic_callee,
        $.scoped_identifier,
        $.field_expression,
        $.subscript_expression,
        // `base.kind()` — the non-virtual base call. kama.y puts `base_access` in
        // `primary_expression_no_parenthesis`, which `invocation_expression` calls; leaving it out here
        // is what the whole-corpus oracle caught on its first run (tests/vtable_depth3.kama).
        $.base_expression,
        $.turbofish_name,
        $.turbofish_type_member,
        $.turbofish_member,
        $.primitive_type, // `string.fromInt(...)` — kama.y `class_type DOT IDENTIFIER`
      ),

    call_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field('function', $._callable),
          field('arguments', $.argument_list),
          // `shifted(x: 2)#(3)` — a generic function's compile-time values come after its runtime
          // arguments, so they hang off the CALL, not off the callee name. (A generic TYPE's values
          // hang off the name instead; see `turbofish_type_member` and `type_name`.)
          optional($.comptime_arguments),
        ),
      ),

    // `f::<int32>()` and `Map::<K,V>.empty()` share this prefix (kama.y `generic_turbofish_name`). It stays
    // PURE — the trailing `.member` belongs to the call/creation site, not here, or the two spellings both
    // try to consume the dot.
    turbofish_name: ($) =>
      seq(field('name', $.identifier), '::', $.type_arguments),

    // `Map::<K,V>.empty()` — the on-type turbofish, the canonical generic-constructor spelling.
    // `::` is the STATIC form of the same thing (`Box::<int32>::tag()`, kama.y:1200) — leaving it out is
    // what the whole-corpus oracle caught on tests/generic_static.kama and tests/idioms_kama_way.kama.
    // `Fixed::<int16>#(8).one()` unmixes what used to be one list; `Fx#(16).of(…)` is the same shape for
    // a type parameterised by VALUES alone, which has no `<…>` to hang a turbofish on (kama.y
    // `turbofish_type_name`, whose two arms these two `choice` members mirror).
    turbofish_type_member: ($) =>
      seq(
        choice(
          seq($.turbofish_name, optional($.comptime_arguments)),
          seq(field('name', $.identifier), $.comptime_arguments),
        ),
        choice('.', '::'),
        field('member', $.identifier),
      ),

    // `r.deserialize::<T>()` — a receiver turbofish. The `::` is what disambiguates from `<` as less-than.
    turbofish_member: ($) =>
      prec.left(
        PREC.member,
        seq(
          field('object', $._expression),
          '.',
          field('name', $.identifier),
          '::',
          $.type_arguments,
        ),
      ),

    argument_list: ($) => seq('(', commaSep($.argument), ')'),

    // THE defining shape of a kama call: every argument is named. There is deliberately NO positional
    // alternative here — `f(1)` must be an ERROR.
    argument: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        optional(choice('ref', 'out')),
        field('value', $._expression),
      ),

    object_creation_expression: ($) =>
      prec.right(
        seq(
          optional('try'),
          'new',
          // `new(allocator: a) T(...)` — placement.
          optional(field('placement', $.argument_list)),
          field('type', choice($._type, $.turbofish_name)),
          optional(seq('.', field('constructor', $.identifier))),
          field('arguments', $.argument_list),
        ),
      ),

    // `[a, b, c]` (elements) or `[v; N]` (fill).
    cast_expression: ($) =>
      seq(optional('try'), 'cast', '<', field('type', $._type), '>', '(', field('value', $._expression), ')'),

    bitcast_expression: ($) =>
      seq('bitcast', '<', field('type', $._type), '>', '(', field('value', $._expression), ')'),

    truncate_expression: ($) =>
      seq(alias($._truncate_keyword, 'truncate'), '<', field('type', $._type), '>', '(', field('value', $._expression), ')'),

    // These take a TYPE, not an expression — or, as `sizeof(ptr: p)`, the object a pointer really points at
    // (a derived behind a base pointer), a runtime value. The label is a name, like any argument; the compiler
    // refuses one that is not `ptr`.
    sizeof_expression: ($) =>
      choice(
        seq(choice('sizeof', 'alignof'), '(', field('type', $._type), ')'),
        seq(choice('sizeof', 'alignof'), '(', field('name', $.identifier), ':', field('value', $._expression), ')'),
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(
          field('operator', choice('!', '~', '-', '+')),
          field('operand', $._expression),
        ),
      ),
